--- a/19-decoupling2/main.tex
+++ b/19-decoupling2/main.tex
@@ -25,6 +25,11 @@
 \newcommand{\cO}{{\mathcal O}} 
 
 \DeclareMathOperator{\prox}{prox}
+\newcommand{\sA}{{\mathsf A}}
+\newcommand{\sB}{{\mathsf B}}
+\newcommand{\maxmon}{{\mathscr M}} 
+\DeclareMathOperator{\dom}{dom}
+\newcommand{\eqdef}{:=} 
 
 
 \newcommand{\cC}{{\mathcal C}} 
@@ -56,7 +61,7 @@
 \newtheorem{assumption}{Assumption}
 \newtheorem{example}{Example}
 
-\title{From $\sigma_k$ to Decoupling}
+\title{Non asymptotic analysis of Stochastic Primal Dual algorithms}
 
 
 \begin{document}
@@ -91,7 +96,9 @@ We are especially trying to understand the following points.
 \section{Introduction}
 
 We provide a primal dual interpretation of the Decoupling algorithm. The algorithm is a Variance reduced of the Coodinate Update Vu Condat (CUVC) algorithm. The CUVC is studied in~\cite{Fercoq,Yin}. It uses stochastic coordinate updates~\cite{Iutzeler, Yin, Pesquet Combettes} in top of Vu-Condat algorithm~\cite{Vu, Condat, Chambolle-Pock}.
-This interpretation allows us to prove results related to the Decoupling2 algorithm, an algorithm very close to the Decoupling algorithm. The results proved for the Decoupling2 algorithm cover the results of~\cite{mishchenko2019stochastic}. 
+This interpretation allows us to prove results related to the Decoupling2 algorithm, an algorithm close to the Decoupling algorithm.
+
+The guarantees for the Decoupling2 algorithm are similar to the guarantees of the Decoupling algorithm~\cite{mishchenko2019stochastic}. 
 
 As a special case, we find the results contained in~\cite{gorbunov2019unified} for prox-SGD as well as now ones. 
 As a special case, we find known results related to CUVC as well as now ones.
@@ -123,7 +130,7 @@ We consider the following setting. The use have access to
 \begin{enumerate}
     \item Unbiaised estimate $g^{k}$ of the gradient $\nabla F(x^k)$ :$\bE(g^k|x^k) = \nabla F(x^k)$
     \item Unbiased estimate $r$ of the function $R$: $\bE_\xi(r(x,\xi)) = R(x)$ 
-    \item Unbiased estimates $p_j$ of the functions $h_j^\star$: $\bE_\xi(p_j(x,\xi)) = h_j^\star$
+    \item Unbiased estimates $p_j$ of the functions $h_j^\star$: $\bE_\xi(p_j(y,\xi)) = h_j^\star(y)$
     \item For every $j$, a sequence $(a_j^k)_k$ of the matrices such that: \begin{itemize}
                                                                                         \item $(a_j^k)_k$ is a bounded martingale
                                                                                         \item $\bE(a_j^0) = A_j$
@@ -137,7 +144,7 @@ To solve Problem~\eqref{eq:pb-original} in this setting, we introduce the Decoup
     \label{eq:algo-general}
     x^{k+1}   &= \prox_{\gamma r(\cdot,\xi^{k})}(x^k - \gamma g^{k} - \gamma \sum_{j=1}^m (a_j^{k})^{T} y_j^k)\\
     \widetilde{x^{k+1}} &= 2x^{k+1} - x^k\\
-    y_j^{k+1} &= \prox_{\frac{1}{\gamma} p_j(\cdot,\xi)}(y_j^k + \frac{1}{\gamma} a_j^k \widetilde{x^{k+1}}), \quad j \sim p_j.
+    y_j^{k+1} &= \prox_{\frac{1}{\gamma} p_j(\cdot,\xi^k)}(y_j^k + \frac{1}{\gamma} a_j^k \widetilde{x^{k+1}}), \quad j \sim p_j.
 \end{align}
 
 This algorithm is general. Five levels of randomness. It admits relevant (new and old) algorithms as special cases.
@@ -151,28 +158,150 @@ If moreover $m=1$, the algorithm~\eqref{eq:algo-general} boils down to Vu-Condat
 
 In the case $m=1$, if $r$ is deterministic and $h_j = 0$ then the algorithm is the prox SGD~\cite{gorbunov2019unified}. If $r$ is also random, it is stochastic prox SGD~\cite{bia-hac,bia-hac-sal}. If moreover $a_1^k$ is also random, then the algorithm is close to~\cite{salim} that allows to solve composite stochastic optimization algorithm under stochastic linear constraints (constraints written as expectations). We will provide more details on it later on.
 
-In the case $m > 1$, if everything else is deterministic, it is CUVC~\cite{fercoq,yin,pesquet,iutzeler}. If moreover $g^k$ is random, then the algorithm is very close the Decoupling algorithm~\cite{mishchenko2019stochastic}. The difference with this algorithm is that it sets $\widetilde{x^{k+1}} = x^{k+1}$.
+In the case $m > 1$, if everything else is deterministic, our algorithm is CUVC~\cite{fercoq,yin,pesquet,iutzeler}. If moreover $g^k$ is random, then the algorithm is very close to the Decoupling algorithm~\cite{mishchenko2019stochastic} in the particular case $A_j = I$. The Decoupling algorithm can be written (using Moreau's identity):
+
+
+\begin{align}
+    x^{k+1}   &= \prox_{\gamma R}(x^k - \gamma g^k - \gamma \sum_j y_j^k)\\
+    \widetilde{x^{k+1}} &= x^{k+1}\\
+    y_j^{k+1} &= \prox_{\frac{1}{\gamma_j} g_j^\star}(y_j^k + \frac{1}{\gamma_j}\widetilde{x^{k+1}} ), \quad j \sim p_j.
+\end{align}
+
+The difference with this algorithm is that it sets $\widetilde{x^{k+1}} = x^{k+1}$.
 
 
 In the sequel we provide four different theorems under various assumptions on the randomness and the function class considered (smooth, convex...).
 For each theorem, we provide relevant special cases in which our assumptions hold.
-The proof of these results is presented in the appendix. It employs monotone operator theory. The relationship between Vu-Condat and the monotone operator theory was already noticed in~\cite{Vu-Condat}.
+The proof of these results is presented in the appendix. It employs monotone operator theory, more precisely random monotone operators~\cite{bia-hac}. The relationship between Vu-Condat and the monotone operator theory was already noticed in~\cite{Vu-Condat}.
 
 
+\asnote{General form of Vu-Condat with inf convolution???}
 
+\section{Non VR, weakly cvx}
 
-\section{Non VR, weakly convex}
+We consider here our most general assumptions.
+
+We assume that $g^k$ satisfy (\cite{gorbunov2019unified}): there exist an adapted stochastic process $(\sigma_k)_k$ and constants $A,B,C \geq 0$ such that
+\begin{align}
+    \bE_k(\|g^k - \nabla f(x^\star)\|^2) &\leq 2AD_F(x^k,x^\star) + B\sigma_k + D_1\\
+    \bE_k(\sigma_{k+1}^2) &\leq (1-\rho)\sigma_k^2 + 2CD_F(x^k,x^\star) + D_2,
+\end{align}
+where $\bE_k$ denotes the conditional expectation.
+
+\begin{theorem}
+    Consider the following Lagrangian function associated Problem~\eqref{eq:pb-original}: $L(x,y_1,\ldots,y_m) = (F+R)(x) - \sum_j h_j^\star(y_j) + \ps{A_j x, y_j}$. Let $x^\star, y^\star = (y_1^\star,\ldots,y_m^\star)$ a primal dual optimal point.
+    Then \begin{equation}
+        L(\overline{x^k},y^\star) - L(x^\star,\overline{y^k}) = \ldots = \cO(1/\sqrt{k}).
+    \end{equation}
+\end{theorem}
+
+\subsection{Relevant special case}
+
+Consider the following problem involving stochastic linear constraints:
+
+\begin{equation}
+    \label{eq:sto-lin-cons}
+    \min F(x) + R(x) \quad \text{s.t.} \quad Ax = b,
+\end{equation}
+ in the following setting:
+ \begin{enumerate}
+    \item $m=1$
+    \item Unbiaised estimate $g^{k}$ of the gradient $\nabla F(x^k)$ :$\bE(g^k|x^k) = \nabla F(x^k)$
+    \item Unbiased estimate $r$ of the function $R$: $\bE_\xi(r(x,\xi)) = R(x)$ 
+    \item Unbiased estimates $b^k$ of the vector $b$: $\bE(b^k|x^k) = b$
+    \item A sequence $(a^k)_k$ of the matrices such that: \begin{itemize}
+                                                                                        \item $(a^k)_k$ is a bounded martingale
+                                                                                        \item $\bE(a^0) = A_j$.
+    \end{itemize}
+\end{enumerate}  
+
+This setting fits our general framework with $m=1$, $h_1 = \iota_b$ and $A_1 = A$. Indeed, in this case
+\begin{equation}
+    \iota_b^\star(y) = \ps{y,b} = \bE_k(\ps{y,b^k}) = \bE(p(y,\xi^k))
+\end{equation}
+where $p(y,\xi^k) = \ps{y,b^k}$ \asnote{not clear}.
+Note that in this case, $\prox_{\sigma p(\cdot,\xi^k)}(y) = y - \sigma b^k$.
+
+Therefore the algorithm is in this case:
+
+\begin{align}
+    \label{eq:algo-general}
+    x^{k+1}   &= \prox_{\gamma r(\cdot,\xi^{k})}(x^k - \gamma g^{k} - \gamma (a^{k})^{T} y^k)\\
+    \widetilde{x^{k+1}} &= 2x^{k+1} - x^k\\
+    y^{k+1} &= y^k + \frac{1}{\gamma} (a^k \widetilde{x^{k+1}} - b^k).
+\end{align}
+
+\subsection{Sanity check: weakly convex theory of~\cite{gorbunov2019unified}}
+
+In the case (Prox-SGD) $m=1$, $A_1 = 0$, $h_1 = 0$ and $r(\cdot,\xi) = R$, the problem is 
+$$
+\min F+R,
+$$
+the algorithm
+$$
+x^{k+1} = \prox{\gamma R}(x^k - \gamma g^k),
+$$
+and the result
+$$
+(F+R)(\overline{x^k}) - (F+R)(x^\star) \leq ... = \cO(1/\sqrt{k}).
+$$
+\asnote{Check that this match what we obtain with the dorect proof of the weakly cvx theory of~\cite{gorbunov}}
 
 \section{Non VR, strongly cvx}
 
-Wasserstein, linear case? 
+\begin{theorem}
+Assume moreover that $A_j$ deterministic, $F$ or $r(\cdot,\xi)$ is strongly convex a.s. and that $p(\cdot,\xi)$ is strongly convex a.s. (\textit{i.e} $p(\cdot,\xi)^\star$) is smooth.
+Then 
+\begin{equation}
+    \bE \|x^k - x^\star\|^2 + \|y^k - y^\star\|^2 \leq \rho^k \bE \|x^0 - x^\star\|^2 + \|y^0 - y^\star\|^2 + C, 
+\end{equation} 
+where $\rho = $ and $C = $
+\end{theorem}
+We can reformulate this convergence in terms of Wasserstein distance. Denote $\mu^k$ the distribution of $(x^k,y^k)$, $\mu^\gamma$ an invariant measure of the Markov Chain $(x^k,y^k)$ (which exists because of Hayek) and $\mu^star = \delta_{(x^\star,y^\star)}$ (unique $(x^\star,y^\star)$ because of strong convex-concavity).
+
+\begin{theorem}
+    \begin{equation}
+        W^2(\mu^k,\mu^\gamma) \leq \rho^k W^2(\mu^0,\mu^\gamma)
+    \end{equation}
+    and the neighborhood size is
+    \begin{equation}
+        W^2(\mu^\gamma,\mu^\star) \leq C\gamma
+    \end{equation}
+\end{theorem}
+
+\subsection{Relevant special case}
+
+$h_j$ smooth and deterministic, $A_j$ deterministic for all $j$
+
+\subsection{Sanity check}
+
+We recover the result of~\cite{gorbunov2019unified} if $r$ is not strongly convex and $m=1$, $h_1=0$, $A_j = 0$.
 
 \section{VR, weakly cvx}
+
+Following~\cite{gorbunov2019unified}, $g^k$ is said variance reduced if $D_1 = 0 = D_2$.
+In this section we assume that $g^k$ is VR, and that $r(\cdot,\xi) = R$, and that $p_j$ deterministic and $A_j$ deterministic (or martingale)
+
+\begin{corollary}
+If 
+\end{corollary}
+
+\subsection{Sanity check}
 
 \section{VR, strongly cvx}
 
 
-linear case, smooth case
+
+\begin{corollary}
+If moreover, $F$ or $R$ is strongly cvx and $A_j$ deterministic and $h_j$ smooth or $h_j = \iota_{b_j}$ or injectivity.
+\end{corollary}
+
+\subsection{Special case}
+
+
+
+\subsection{Sanity check}
+
 \subsection{Application : linear rate in distributed optimization without strong monotonicity}
 
 
@@ -182,24 +311,104 @@ linear case, smooth case
 \part{Appendix}
 
 
-\section{Extension of~\cite{gorbunov2019unified} to the weakly convex setting and $R$ strongly convex and $\partial R$ monotone operator}
-Let $F$ (resp. $R$) $\mu$ strongly convex (resp $\lambda$ strongly convex). We allow $\mu=0$ (resp $\lambda = 0$)  
-The prox-SGD algorithm can be written
-\begin{equation}
-    x^{k+1} = x^k - \gamma g^k - \gamma A(x^{k+1})
-\end{equation}
-where $A = \partial R$. The symbol $=$ should be an inclusion $\in$ since $A$ is set valued, but we keep $=$ to simplify.
 
-The iterates $x^k$ satisfy
+\section{Maximal monotone operators}
+We review some basic material regarding maximal monotone operators. The proof of these facts can be found in~\cite{bau-com-livre11}.
+Let $\sX$ be an Euclidean space and let $I$ be the identity map over $\sX$. An operator $\sA$ over $\sX$ is a set valued mapping over $\sX$, \textit{i.e} a function from $\sX$ to the set of all subsets of $\sX$. An operator can be identified to its graph $G(\sA) = \{(x,y) \in \sX \times \sX, y \in \sA(x)\}$. The domain of $\sA$ is $\dom(\sA) = \{x \in \sX, \sA(x) \neq \emptyset\}$. The inverse operator $\sA^{-1}$ is defined by $G(\sA^{-1}) = \{(y,x) \in \sX \times \sX, y \in \sA(x)\}$, the resolvent operator is defined by $J_{\sA} = (I+\sA)^{-1}$ and the set of zeros of $\sA$ is $Z(\sA) = \sA^{-1}(0)$. Note that $\ell \in Z(\sA)$ if and only if $\ell \in J_\sA(\ell)$. The operator $\sA$ is said monotone if the following condition holds: 
+\begin{equation*}
+\forall (x,y),(x',y') \in G(\sA), \ps{x-x',y-y'} \geq 0,
+\end{equation*}
+where $\ps{\cdot,\cdot}$ denotes the inner product of $\sX$. In this case, $J_{\sA}(x)$ is either the empty set or a singleton, \textit{i.e} $J_{\sA}$ can be identify with a classical function $\dom(J_{\sA}) \to \sX$.
+Moreover, $\sA$ is a maximal monotone operator, which we denote $\sA \in \maxmon(H)$, if $\sA$ is a monotone operator such that $\dom(J_{\sA}) = H$. In this case, for every $x$, the inclusion $y \in x - \gamma A(y)$ (where $y$ is the unknown) has a unique solution $y = J_{\sA}(x)$. If $y' = J_{\sA}(x')$, then
+$$
+\|y-y'\|^2 = \|x-x'\|^2 - 2\gamma\ps{A(y)-A(y'),y-y'} - \gamma^2\|A(y)-A(y')\|^2,
+$$
+with a slight notation abuse.
+The maximality of $\sA$ is equivalent to the maximality (for the inclusion ordering) of $G(\sA)$ in the set of all graphs of monotone operators over $H$~\cite{minty1962monotone}. Moreover, if $\sA$ is maximal, then for every $x \in H$, $\sA(x)$ is a (possibly empty) closed convex set. If $x \in \dom(\sA)$, $\sA_0(x)$ is defined as the projection of $0$ onto $\sA(x)$. In other words, $\sA_0(x)$ is the least norm element in $\sA(x)$. Given $\gamma > 0$, the Yosida approximation of $\sA$ is the function $\sA_\gamma(x) = \frac{x - J_{\gamma\sA}(x)}{\gamma}$. The function $\sA_\gamma$ is $1/\gamma$-Lipschitz continuous. Given two maximal monotone operators $\sA$ and $\sB$, the sum $\sA + \sB$ is defined by $(\sA + \sB)(x) \eqdef \sA(x) + \sB(x)$ where $\sA(x) + \sB(x)$ is the classical Minkowski sum of two sets. One can check that $\sA + \sB$ is a monotone operator, however, $\sA + \sB$ is not necessarily maximal~\cite[Page 54]{phelps2009convex}. 
+
+Consider the set $\Gamma_0(H)$ of convex lower semi-continuous and proper functions $F : H \to (-\infty,+\infty]$ (see~\cite{bau-com-livre11}). Then, the subdifferential $\partial F$ of $F$ is a maximal monotone operator. In other words, $\maxmon_s(H) = \{\partial F, F \in \Gamma_0(H)\}$ is a subset of $\maxmon(H)$. Moreover, $J_{\gamma \partial F} = \prox_{\gamma F}$. Let $C$ be a convex set and consider $F = \iota_C$ the convex indicator function of $C$, defined by $F(x) = 0$ if $x \in C$ and $F(x) = +\infty$ else. Then $F \in  \in \Gamma_0(H)$ and $\partial F$ is the normal cone $N_C$ to $C$. 
+% However, if $\dom(\sA) = H$, then $\sA + \sB$ is maximal\cite[Th. ]{bre-livre73}. In the case where $\sA = \partial F$ and $\partial G$ where $F,G \in \Gamma_0(H)$, the condition $\dom(\sA) = H$ implies $\sA + \sB = \partial(F+G)$.
+\asnote{inverse of subdifferential = subdiff of Legendre transfrom}
+\section{Vu-Condat}
+
+Given two maximal monotone operators $\sA,\sB$, the goal of the Forward Backward algorithm is to find a zero of $\sA + \sB$.
+The Forward Backward algorithm is written 
+\begin{equation}
+    \label{eq:FB}
+    x^{k+1} = J_{\gamma\sA}(x^k - \gamma \sB(x^k))
+\end{equation}
+The FB can be equivalently defined by the inclusion
+\begin{equation}
+    \label{eq:FB2}
+    x^{k+1} \in x^k - \gamma\sB(x^k) - \gamma\sA(x^{k+1}).
+\end{equation}
+
+
+Under some qualification conditions, a minimizer $x^\star$ of Problem~\eqref{eq:pb-original} is a solution to the inclusion
+$$
+0 \in \nabla F(x^\star) + \partial R(x^\star) + \sum_j A_j^T \partial h_j (A_j x^\star).
+$$
+In other words, for every $j$ there exists $y_j^\star \in \partial h_j (A_j x^\star)$ such that
+$$
+0 \in \nabla F(x^\star) + \partial R(x^\star) + \sum_j A_j^T y_j^\star.
+$$
+We can reformulate this property as follows: the tuple $(x^\star,y_1^\star,\ldots,y_m^\star)$ must satisfy
+\begin{align}
+    \label{eq:pridu-opt}
+    0 &\in \nabla F(x^\star) + \partial R(x^\star)+ \sum_j A_j^T y_j^\star\\
+    0 &\in -A_j x^\star + \partial h_j^\star(y_j^\star),
+\end{align}
+for every $j$.
+To solve this inclusion, a first idea could be to apply the Forward Backward algorithm to the following monotone operators (note that $\sA$ is a monotone operator under the Euclidean inner product as a sum of a subdifferential and a skew symmetric matrix and that $\sB$ is the gradient of $(x,y) \mapsto F(x)$):
+\[
+\sA(x,y) = \begin{bmatrix} \partial R(x)&  + \sum_j A_j^T y_j \\ -A_j x& +\partial h_j^\star(y_j)\end{bmatrix} .
+\]
+\[
+\sB(x,y) = \begin{bmatrix} \nabla F(x) \\ 0 \end{bmatrix} .
+\]
+Indeed, $0 \in \sA+\sB(x^\star,y^\star)$ iff $(x^\star,y^\star)$ satisfy~\eqref{eq:pridu-opt}.
+The iterates of the FB algorithm $(x^k,y^k)$ converge  to a solution $(x^\star,y^\star)$ provided $F$ is smooth. However, it can be seen that the update is intractable in many cases.
+To overcome this issue, the idea of Vu and Condat is to apply the FB algorithm to the monotone operators $P_\gamma^{-1} \sA$ and $P_\gamma^{-1} \sB$ in the Euclidean space $\bR^d \times \bR^{d_1} \times \ldots \times \bR^{d_m}$ with the inner product induced by $P_{\gamma}$ defined by
+
+\[
+P_\gamma = \begin{bmatrix} I &  -\gamma M^T \\ -\gamma M & I \end{bmatrix},
+\]
+Note that $(1-\gamma\|M\|)\|z\| \leq \ps{P_\gamma z,z} \leq (1+\gamma\|M\|)\|z\|$ and hence $P_\gamma$ is regular as soon as $\gamma < 1/\|M\|$
+
+The reason for doing this is twofold.
+First, $P_\gamma^{-1} \sA$ and $P_\gamma^{-1} \sB$ are monotone operators :
+$$
+\ps{P_\gamma^{-1} \sA(x) - P_\gamma^{-1} \sA(y),x-y}_{P_\gamma} = \ps{\sA(x) - \sA(y),x-y} \geq 0
+$$
+because $\sA$ is a monotone operator under the Euclidean inner product.
+Second, the update of the FB algorithm only require the computation of $\prox_{\gamma R}, \prox_{\gamma h_j}, \nabla F$:
+$$z^{k+1} - z^k \in -\gamma P_\gamma^{-1} \sB(z^k) - \gamma P_\gamma^{-1} \sA(z^{k+1})$$
+is equivalent to 
+$$
+P_\gamma (z^{k+1} - z^k) \in -\gamma \sB(z^k) - \gamma \sA(z^{k+1}),
+$$
+which gives Vu-Condat algorithm~\eqref{eq:vc}.
+
+
+\section{Proof of the VR theorems}
+In Vu-Condat, we replace $\sB$ (the gradient of $(x,y) \mapsto \nabla F(x)$) by some unbiased estimate $G^k = (g^k,0)$. 
+Let $F$ (resp. $R$) $\mu$ strongly convex (resp $\lambda$ strongly convex). We allow $\mu=0$ (resp $\lambda = 0$)  
+The algorithm is written
+\begin{equation}
+    z^{k+1} = z^k - \gamma P_\gamma^{-1}G^k - \gamma P_\gamma^{-1} A(z^{k+1})
+\end{equation}
+The symbol $=$ should be an inclusion $\in$ since $A$ is set valued, but we keep $=$ to simplify.
+
+The iterates $x^k$ satisfy (see Eq.~\eqref{eq:resolvent})
 
 \begin{align}
     \label{eq:PG-final}
-    &\|x^{k+1} - x^\star\|^2 \\
-    =& \|x^k - x^\star\|^2 -\gamma^2\|A(x^{k+1}) - A(x^\star)\|^2 + \gamma^2 \|g^k - \nabla F(x^\star) \|^2\\
-    &- 2\gamma\ps{A(x^{k+1})-A(x^\star),x^{k+1}-x^\star} - 2\gamma\ps{g^k-\nabla F(x^\star),x^k-x^\star}.
+    &\|z^{k+1} - z^\star\|_{P_\gamma}^2 \\
+    =& \|z^k - z^\star\|_{P_\gamma}^2 -\gamma^2\|P_\gamma^{-1} A(z^{k+1}) - P_\gamma^{-1} A(z^\star)\|_{P_\gamma}^2 + \gamma^2 \|G^k - \nabla F(x^\star) \|_{P_\gamma}^2\\
+    &- 2\gamma\ps{A(z^{k+1})-A(z^\star),z^{k+1}-z^\star}_{P_\gamma} - 2\gamma\ps{g^k-\nabla F(x^\star),x^k-x^\star}_{P_\gamma}.
 \end{align}
 This equality will be proven in the sequel in a more general case (see Eq.~\eqref{eq:FB-final}).
-
+\asnote{Don't forget to use negative suare norm for strongly monotone case/linear case}
 We assume that $g^k$ satisfy (\cite{gorbunov2019unified}): there exist an adapted stochastic process $(\sigma_k)_k$ and constants $A,B,C \geq 0$ such that
 \begin{align}
     \bE_k(\|g^k - \nabla f(x^\star)\|^2) &\leq 2AD_F(x^k,x^\star) + B\sigma_k + D_1\\
